kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mario-service

spec:
  selector:
    app: mario-app

  ports:
  - port: 80
    targetPort: 8080

  type: ClusterIP
